fixed layout breaks when windows are less than 600px

--- a/myapp/public/stylesheets/style.css
+++ b/myapp/public/stylesheets/style.css
@@ -27,3 +27,7 @@ img{
   margin: 0px 0 0 0;
   width: 100%;
 }
+
+.container-fluid {
+  min-width: 600px;
+}
